# DarkPlay

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  qt.conf
config/: .env  CMakePresets.json  qt.conf
include/controllers/: MediaController.h
include/core/: Application.h  ConfigManager.h  PluginManager.h  ThemeManager.h
include/media/: IMediaEngine.h  MediaManager.h  QtMediaEngine.h
include/plugins/: IPlugin.h
include/ui/: ClickableSlider.h  MainWindow.h  SettingDialog.h  UIStateManager.h
include/utils/: QtEnvironmentSetup.h
src/controllers/: MediaController.cpp
src/core/: Application.cpp  ConfigManager.cpp  PluginManager.cpp  ThemeManager.cpp
src/media/: MediaManager.cpp  QtMediaEngine.cpp
src/ui/: ClickableSlider.cpp  MainWindow.cpp  SettingDialog.cpp  UIStateManager.cpp
src/utils/: QtEnvironmentSetup.cpp
